@@ -1,5 +1,11 @@
 5/31/2006 Bob Rossi <bob@brasko.net>
 
+	* autorelease.sh: Pass correct version number to autoregen.sh
+	* autoregen.sh: Update configure.in to have version number as the 
+	date if a version number isn't passed in.
+	
+5/31/2006 Bob Rossi <bob@brasko.net>
+
 	* autorelease.sh: Trying to update for svn.
 
 5/31/2006 Bob Rossi <bob@brasko.net>
